# apps/api/src/api/auth/schemas/signup.schema.ts
@@ -1,0 +1,40 @@
+import { createRoute, z } from '@hono/zod-openapi';
+import { userObjectSchema } from '../../user/schemas/user-object.schema';
+
+const signupRequest = z.object({
+  name: z.string().min(2, 'Name is required'),
+  email: z.email('Invalid email'),
+  password: z.string().min(8, 'Password must be at least 8 characters long'),
+});
+
+type SignupRequest = z.infer<typeof signupRequest>;
+
+const signupResponse = userObjectSchema;
+
+type SignupResponse = z.infer<typeof signupResponse>;
+
+const signupRoute = createRoute({
+  path: '/auth/signup',
+  method: 'post',
+  request: {
+    body: {
+      content: {
+        'application/json': {
+          schema: signupRequest,
+        },
+      },
+    },
+  },
+  responses: {
+    200: {
+      content: {
+        'application/json': {
+          schema: signupResponse,
+        },
+      },
+      description: 'Signup successful',
+    },
+  },
+});
+
+export { signupRoute, SignupRequest, SignupResponse };
