# shared/openapi.yml
@@ -11,7 +11,7 @@ paths:
       parameters:
         - schema:
             type: string
-            minLength: 3
+            minLength: 1
             example: '1212121'
           required: true
           name: id
@@ -26,14 +26,14 @@ paths:
                 properties:
                   id:
                     type: string
+                    minLength: 1
                     example: '123'
+                  email:
+                    type: string
+                    example: john.doe@example.com
                   name:
                     type: string
                     example: John Doe
-                  email:
-                    type: string
-                    format: email
-                    example: john.doe@example.com
                   createdAt:
                     type: string
                     format: date-time
@@ -44,7 +44,60 @@ paths:
                     example: '2021-01-01'
                 required:
                   - id
-                  - name
                   - email
+                  - name
+                  - createdAt
+                  - updatedAt
+  /api/auth/signup:
+    post:
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  minLength: 2
+                email:
+                  type: string
+                  format: email
+                password:
+                  type: string
+                  minLength: 8
+              required:
+                - name
+                - email
+                - password
+      responses:
+        '200':
+          description: Signup successful
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: string
+                    minLength: 1
+                    example: '123'
+                  email:
+                    type: string
+                    example: john.doe@example.com
+                  name:
+                    type: string
+                    example: John Doe
+                  createdAt:
+                    type: string
+                    format: date-time
+                    example: '2021-01-01'
+                  updatedAt:
+                    type: string
+                    format: date-time
+                    example: '2021-01-01'
+                required:
+                  - id
+                  - email
+                  - name
                   - createdAt
                   - updatedAt
